Add settings for max/min cpu perf pct

--- a/defaults.conf
+++ b/defaults.conf
@@ -48,3 +48,7 @@ RESTORE_THRESHOLDS_ON_BAT=0
 NATACPI_ENABLE=1
 TPACPI_ENABLE=1
 TPSMAPI_ENABLE=1
+CPU_MIN_PERF_ON_AC=0
+CPU_MAX_PERF_ON_AC=100
+CPU_MIN_PERF_ON_BAT=0
+CPU_MAX_PERF_ON_BAT=20
