tune max_perf_pct according to user input
this feature depends on xprintidle to get idle time
1. when system idle time longer then threshold, and CPU loaling is low,
set max_perf_pct to max value as BAT
2. when there is user input, set max_perf_pct to max value as AC

--- a/tlp.in
+++ b/tlp.in
@@ -272,6 +272,9 @@ case "$_cmd" in
 
                 # apply radio states
                 set_radio_device_states start
+
+                # start tuning max_perf_pct according to user idle time
+                set_intel_cpu_perf_pct_ext $pwrmode start
                 ;;
 
             restart|force-reload)
@@ -287,6 +290,9 @@ case "$_cmd" in
                 echo -n "Setting battery charge thresholds..."
                 set_charge_thresholds
                 echo "done."
+
+                # start tuning max_perf_pct according to user idle time
+                set_intel_cpu_perf_pct_ext $pwrmode restart
                 ;;
 
             stop)
@@ -311,6 +317,9 @@ case "$_cmd" in
 
                 # apply radio states
                 set_radio_device_states stop
+
+                # stop set_intel_cpu_perf_pct_ext()
+                set_intel_cpu_perf_pct_ext $pwrmode stop
                 ;;
 
             *)
@@ -341,6 +350,8 @@ case "$_cmd" in
             fi
             unlock_tlp
         fi
+        # start tuning max_perf_pct according to user idle time
+        set_intel_cpu_perf_pct_ext $pwrmode auto
         ;;
 
     start) # set mode depending on state (interactive mode)
