--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,7 @@ export TLP_ELOD=/usr/lib/elogind/system-sleep
 export TLP_SDSL=/usr/lib/systemd/system-sleep
 export TLP_SYSD=/usr/lib/systemd/system
 export TLP_ULIB=/usr/lib/udev
+export TLP_ZSHCPL=/usr/share/zsh/vendor-completions
 
 # Debian and Ubuntu provide x86_energy_perf_policy in different packages
 ifeq ($(shell dpkg-vendor --derives-from Ubuntu && echo yes),yes)
