set HP KB 03f0:0b88 autosuspend and delay_ms to 30s

--- a/defaults.conf
+++ b/defaults.conf
@@ -38,6 +38,7 @@ RUNTIME_PM_ON_AC=on
 RUNTIME_PM_ON_BAT=auto
 RUNTIME_PM_DRIVER_BLACKLIST="amdgpu mei_me nouveau nvidia pcieport radeon"
 USB_AUTOSUSPEND=1
+USB_WHITELIST="03f0:0b88"
 USB_BLACKLIST_BTUSB=0
 USB_BLACKLIST_PHONE=0
 USB_BLACKLIST_PRINTER=1
