Set disk read_ahead_kb to 4096
The default value is 128.
However, VPB battery life increased after set it to 4096.

Signed-off-by: Huajun Li <huajun.li@intel.com>
Signed-off-by: Yong Zhu <yong.zhu@intel.com>
Reviewed-by: Junhan Shi <junhan.shi@intel.com>

--- a/defaults.conf
+++ b/defaults.conf
@@ -16,6 +16,7 @@ DISK_DEVICES="nvme0n1 sda"
 DISK_APM_LEVEL_ON_AC="254 254"
 DISK_APM_LEVEL_ON_BAT="128 128"
 DISK_IOSCHED="keep keep"
+DISK_READAHEAD="4096"
 SATA_LINKPWR_ON_AC="med_power_with_dipm max_performance"
 SATA_LINKPWR_ON_BAT="med_power_with_dipm min_power"
 AHCI_RUNTIME_PM_TIMEOUT=15
